css/navigation.css
:root {
  --primary-text-color: #eee;
  --background-color: linear-gradient(0deg, rgb(6, 5, 21) 50%, rgb(86, 0, 167) 120%);
  --overlay-color: #9c4bfe;
  --nav-color: rgba(6, 5, 21, 0.9);
  --header-color: rgba(22, 19, 56, 0.712);
  --primary-font-family: "K2D-Regular";
  --secondary-font-family: "K2D-SemiBold";
  --boldest-font-family: "K2D-Bold";
  --spacing-small: 8px;
  --spacing-main: 16px;
  --spacing-large: 36px;
  --submenu-width: calc((100% - (3 * 10px)) / 3);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
header {
  border-bottom: 1px solid #fff;
  color: var(--primary-text-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0;
  padding: var(--spacing-small);
  position: relative;
  z-index: 10;
}

nav ul {
  cursor: pointer;
  display: none;
  list-style-type: none;
  top: 110%;
  left: 0;
  background-color: var(--nav-color);
  position: absolute;
}

nav li {
  padding: 5px;
}
.submenu {
  position: absolute;
  left: 100%;
  top: 0;
  display: none;
  z-index: 11;
}

.submenu-2 {
  position: absolute;
  top: 0;
  left: 100%;
  background-color: var(--nav-color);
  display: none;
  z-index: 12;
}

.submenu-3 {
  position: absolute;
  top: 0;
  left: 99%;
  background-color: var(--nav-color);
  display: none;
  z-index: 13;
}

ul.submenu,
ul.submenu-2,
ul.submenu-3 {
  padding: 5px;
}
.hamburger-menu {
  height: 50px;
  width: 50px;
}

.logo-mobile {
  position: relative;
  height: 55px;
  width: 55px;
}

/* ----- Navlink ----*/
nav {
  font-family: "K2D-Regular";
}

nav a {
  color: #fff;
  font-family: "K2D-Regular";
}

nav ul li:hover {
  background-color: var(--overlay-color);
  transition: 0.7s all;
}

a:link {
  text-decoration: none;
  transition: 1.5s all;
}

a:hover {
  background-color: transparent;
  text-decoration: underline;
  transition: 1.5s all;
}
li.with-arrow {
  transition: 2s all;
}

/* Display arrow only for items with the "with-arrow" class */
nav ul > li.with-arrow::before {
  content: "▶";
  z-index: 12;
}
/* Display arrow only for items with the "with-arrow.active" class */
nav ul > li.with-arrow.active::before {
  content: "▼";
  z-index: 12;
}

/* Remove arrow for items without children */
nav ul > li:not(.with-arrow) {
  position: relative;
}

/* Remove arrow for last children */
nav ul > li:not(.with-arrow) > ul li:last-child::before {
  content: none;
}
.submenu,
.submenu-2,
.submenu-3 {
  padding: var(--spacing-small) 0;
  margin: 0;
}

.submenu li:hover,
.submenu-2 li:hover,
.submenu-3 li:hover {
  background-color: var(--overlay-color);
  transition: 1.2s all;
}

nav ul > li::before,
.submenu li::before,
.submenu-2 li::before,
.submenu-3 li::before {
  white-space: nowrap;
}

.submenu li,
.submenu-2 li,
.submenu-3 li {
  min-width: 90%;
  display: flex;
  padding: 5px;
}

/* Media Query adjustments */
@media screen and (min-width: 991px) {
  header {
    display: block;
    margin: 0;
    padding: 20px;
    background-color: var(--nav-color);
  }

  nav {
    font-size: 1.2rem;
  }

  main {
    min-height: auto;
  }
  nav .hamburger-menu {
    display: none;
  }

  .content {
    padding: 15px;
  }
  .logo-mobile {
    display: none;
  }

  nav > ul {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    list-style-type: none;
    position: relative;
  }

  nav > ul > li {
    cursor: pointer;
    padding: var(--spacing-small) var(--spacing-main);
    position: relative;
    border-radius: 15px;
  }

  .submenu li {
    padding-left: none;
  }

  .submenu {
    position: absolute;
    top: 100%;
    left: 0;
    background-color: rgba(6, 5, 21, 0.9);
    padding: var(--spacing-small);
  }

  .submenu li::before,
  .submenu-2 li::before,
  .submenu-3 li::before {
    white-space: nowrap;
  }

  .submenu li,
  .submenu-2 li,
  .submenu-3 li {
    padding: var(--spacing-small) var(--spacing-main);
    border-radius: 15px;
  }

  /* Remove arrow for items without children */
  nav ul > li:not(.with-arrow):only-child::before,
  .submenu li:not(.with-arrow):only-child::before,
  .submenu-2 li:not(.with-arrow):only-child::before,
  .submenu-3 li:not(.with-arrow):only-child::before {
    content: none;
  }
}

